--- a/mediaquaries.css
+++ b/mediaquaries.css
@@ -25,8 +25,9 @@
         padding: 0;
         height: auto;
         max-height: 275px;
-        width: auto;
-        align-items: center;   
+        width: 250;
+        align-items: center;
+        margin-top: -32px;   
     }
     .profile-image img{
         max-height: 100%;
@@ -50,6 +51,20 @@
         text-align: center;
         padding-top: 10px;
         color: rgba(81, 82, 83, 0.849);
+    }
+    .profile-image::after {
+        content: "";
+        position: absolute;
+        top: 34%;
+        left: 56%;
+        transform: translate(-50%, -50%) rotate(45deg);
+        /* height: auto; */
+        height: 275px;
+        width: 275px;
+        border-bottom: 3px solid black;
+        border-top: 3px solid orangered;
+        border-radius: 50%;
+        animation: move 3.5s infinite;
     }
     #about{
         height:auto;
